--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="css/chessground.base.css">
     <link rel="stylesheet" href="css/chessground.brown.css">
     <link rel="stylesheet" href="css/chessground.cburnett.css">
+    <script src="js/wasm_exec.js"></script>
     <script type="module" src="ts/index.js"></script>
 </head>
 <body style="background:#000;overflow:hidden">
+<div onclick="balla();"></div>
 <table>
     <tr>
         <td style="vertical-align: top">
