--- a/client/html-content/index.html
+++ b/client/html-content/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>YacGui</title>
-<!--    <script src="js/wasm_exec.js"></script>-->
-    <script src="js/wasm_tiny_exec.js"></script>
+    <script src="js/wasm_exec.js"></script>
+<!--    <script src="js/wasm_tiny_exec.js"></script>-->
     <script src="js/wasm_main.js"></script>
 </head>
 <body style="background:#000;overflow:hidden">
