--- a/client/html-content/index.html
+++ b/client/html-content/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <title>YacGui</title>
     <script src="js/wasm_exec.js"></script>
-<!--    <script src="js/wasm_tiny_exec.js"></script>-->
-    <script src="js/wasm_main.js"></script>
+    <!--    <script src="js/wasm_tinygo_exec.js"></script>-->
+    <script>
+        window.wg = {};
+
+        const go = new Go();
+        WebAssembly.instantiateStreaming(fetch("../wasm/main.wasm"), go.importObject).then((result) => {
+            go.run(result.instance);
+        });
+    </script>
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        html, body {
+            overflow: hidden;
+            background: #000;
+        }
+    </style>
 </head>
-<body style="background:#000;overflow:hidden">
-<table>
-    <tr>
-        <td style="vertical-align: top">
-            <div id="board" style="width: 96vh; height: 96vh"></div>
-        </td>
-        <td style="vertical-align: top">
-            <div id="output" style="color:#eee;font-family:Verdana"></div>
-        </td>
-    </tr>
-</table>
-</body>
+<body></body>
 </html>
